[build-system]
requires = [
    "setuptools>=42",
    "setuptools_scm[toml]>=7.0",
    "wheel"
]

[project]
name = "miller"
dependencies = [
    "matplotlib>=3.8.4",
    "numpy>=1.26.4",
    "tomli"
]
dynamic = ["version"]

[project.scripts]
miller = "miller:main"

[project.optional-dependencies]
tests = ['pytest']

[tool.setuptools_scm]
version_scheme = "post-release"
local_scheme = "dirty-tag"
write_to = "src/miller/_version.py"